# rocket-juniper-example

./: .envrc  Cargo.toml  Rocket.toml
migrations/2018-12-26-152902_create_todo_table/: down.sql  up.sql
src/: db.rs  lib.rs  models.rs  routes.rs  schema.rs
src/graphql/: schema.rs
