[package]
name = "juniper-rocket-example"
version = "0.1.0"
authors = ["Eric Dattore <eric.dattore@gmail.com>"]
edition = "2018"

[lib]
path = "src/lib.rs"
name = "libjuniperrocketexample"

[[bin]]
path = "src/bin/main.rs"
name = "juniper-rocket-example"

[dependencies]
rocket = "0.4.0"
rocket_contrib = { version = "0.4.0", features = ["databases", "diesel_sqlite_pool"] }
diesel = "1.3"
juniper = { path = "../juniper/juniper" }
juniper_rocket = { path = "../juniper/juniper_rocket" }
